--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,31 @@
 .App {
-  text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 40px;
+    /* min-height: calc(100vh - 80px); */
 }
 
-.App-logo {
-  height: 40vmin;
+.App div {
+    padding: 20px;
+    margin: 10px;
+    background-color: lightgray;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App div p {
+    margin-top: 0;
 }
 
-.App-link {
-  color: #09d3ac;
+.left {
+    background-color: darkslategray;
+    color: azure;
+}
+
+.right {
+    background-color: wheat;
+    color: firebrick;
+}
+
+.friend-button {
+    margin-left: 10px;
+    margin-right: 10px;
 }
