--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 ul {
     list-style-type: none;
-    margin: none;
+    margin: 0;
     padding: 0;
 }
 
@@ -30,6 +30,23 @@ ul {
     margin-left: 0;
     margin-right: 0;
     padding: 0;
+}
+
+.App .demonym {
+    padding: 0;
+    margin: 0;
+}
+
+.App .country_selector {
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.App .demonym_app__placeholder {
+    padding: 0;
+    margin: 0;
 }
 
 .Accordion {
